@@ -1523,7 +1523,7 @@ they type in, and everything they read on their screen.
 STAT=\
 Command : STAT\n\r\
 Usage   : STAT ((SKILL/STAT TYPE) [TARGET NAME])/([NUMBER] [DAYS/WEEKS/MONTHS/YEARS]\n\r\
-Usage   : ... (/SKILLUSE/QUEST/AREA))\n\r\
+Usage   : ... (/SKILLUSE/QUEST/AREA/CRIME))\n\r\
 Example : stat\n\r\
 Example : stat 2 weeks\n\r\
 Example : stat tom\n\r\
